--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -217,6 +217,8 @@ Error message and password prompt
 
 <li>blacklist pro</li>
 
+<li>blagues</li>
+
 <li>Books / livres</li>
 
 <li>Bruce Lee talk by his daughter</li>
@@ -343,9 +345,13 @@ Error message and password prompt
 
 <li>La chose la plus dure pour un Homme.</li>
 
+<li>LE TOTALITARISME PAR LA CONFUSION  (Hannah Arendt)</li>
+
 <li>leboncoin</li>
 
 <li>Les 10 phrases positives à dire aux enfants</li>
+
+<li>Les questions pour comprendre un sujet</li>
 
 <li>Liwag subtlety / nowhere palm</li>
 
@@ -9404,7 +9410,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200509093334254" list="Home pw" modified="20200509093334254" title="$:/StoryList">
+<div created="20200605074309162" list="[[Books / livres]] Home" modified="20200605074309162" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9423,7 +9429,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///home/osef/Bureau/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;file:///C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -9443,7 +9449,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/home/osef/Bureau/lenopgm/notes/TiddlyWiki.html&quot;
+            &quot;text&quot;: &quot;/C:/slemoine/priv%C3%A9%20perso/PortableGit/lenopgm/notes/TiddlyWiki.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9464,8 +9470,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200226160839255" title="$:/temp/search">
-<pre>hypno</pre>
+<div created="20190114084246125" modified="20200605074307882" title="$:/temp/search">
+<pre>books</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9700,8 +9706,15 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Jean-Samuel Pallard
 </pre>
 </div>
-<div created="20190131165226977" modified="20200131151820164" tags="epub download" title="Books / livres">
-<pre>! Fabien Olicard
+<div created="20200526193035917" modified="20200526193059628" tags="humour" title="blagues">
+<pre>* Mr &amp; Mme soupover : Michel (soupe au vermichel)
+* 2 mouettes se battent pour un bout de pain : on fait mouette mouette ?
+* comment appelle-ton un oiseau roux ? un roussignol
+</pre>
+</div>
+<div created="20190131165226977" modified="20200605074426385" tags="epub download" title="Books / livres">
+<pre>* ''Paul Feyerabend - Against method, outline of an anarchist theory of knowledge / Contre la méthode, Esquisse d’une théorie anarchiste de la connaissance''
+! Fabien Olicard
 * La lecture rapide (ou pas) - Tony Buzan (no epub)
 ! Delphine Batho
 * The Overstory / L'Arbre-Monde - Richard Powers
@@ -12164,6 +12177,49 @@ Pillars of Eternity
 Malheureusement bien des hommes n'ont pas la puissance d'analyse leur permettant de comprendre et si parfois ils l'ont ils leur manque souvent l'énergie dont découle la volonté de changer.
 Passer par delà sa programmation génétique et son éducation pour agir en toute conscience et de loin la chose la plus dur qu'un homme puisse réaliser dans sa vie , mais c'est par cela qu'il pourra enfin devenir un homme libre.</pre>
 </div>
+<div created="20200515093807126" modified="20200515093950003" tags="HannahArendt" title="LE TOTALITARISME PAR LA CONFUSION  (Hannah Arendt)">
+<pre>LE TOTALITARISME PAR LA CONFUSION  (Hannah Arendt)
+
+« Selon Hannah Arendt, les régimes totalitaires prennent un pouvoir “total” sur les individus en les arrosant d’informations contradictoires, jusqu’à ce qu’ils n’aient plus aucun moyen de savoir où se trouve la vérité.
+Sous Hitler, sous Staline, explique-t-elle, le citoyen ne savait jamais à quelle sauce il allait être mangé. La propagande gouvernementale ne consistait pas à simplement “mentir” aux citoyens, en présentant une version “officielle” des faits dans les journaux, version qui aurait alors pu aisément être critiquée.
+
+Non, c’était beaucoup plus subtil et efficace que cela.
+
+Pour empêcher véritablement tout débat, toute initiative, pour obtenir des citoyens qu’ils se découragent totalement, qu’ils cessent d’essayer de comprendre, et qu’ils perdent donc tout moyen d’agir, les médias d’Etat les plaçaient sous un déluge continu d’informations incohérentes, mêlant le vrai et le faux jusqu’à ce que plus aucune personne ne puisse savoir de bonne foi ce qu’il fallait penser :
+
+    “Nous gagnons la guerre !”,
+    “Nous perdons la guerre !”
+    “Les rations vont être augmentées !”
+    “Les rations vont être diminuées !”
+    “L’économie est en croissance !”
+    “Il va falloir travailler plus !”
+    “Vous pouvez sortir sans autorisation !”
+    “Les contrôles vont être renforcés !”
+
+Pour ajouter à la confusion, les Autorités ne parlaient plus d’une seule voix, mais au contraire via une foule de porte-paroles, dont il était impossible de savoir lequel portait la “véritable” parole de l’Etat.
+
+C’est exactement ce que nous vivons aujourd’hui, et c’est pourquoi une telle tension s’installe dans les esprits.
+C’est normal. Ce n’est pas de votre faute si vous ne comprenez rien, si vous êtes ballotté entre des amis, des voisins, des journalistes, des blogueurs ou encore des “youtubeurs” qui, chacun ont leur opinion qui paraît valable, tout en étant incompatibles les unes avec les autres.
+
+C’est le résultat logique de la communication gouvernementale qui introduit confusion et contradictions partout.
+Car, si vous êtes de bonne foi, cela fait déjà plusieurs semaines, que vous n’avez plus aucun moyen de savoir ce qu’il faut raisonnablement penser de la situation.
+
+Depuis plusieurs semaines, il n’y a plus aucun moyen de savoir ce qu’il faut “raisonnablement” penser de la situation
+Lorsque le Président Macron annonce le déconfinement à partir du 11 mai, il est aussitôt suivi d’une déclaration de son Premier ministre qui explique que le déconfinement ne touchera que certaines personnes, dans certaines zones.
+
+Au même moment, le Pr Jean-François Delfraissy, président du conseil scientifique Covid-19, et donc principal conseiller de l’Elysée, affirme que les personnes âgées resteront confinées jusqu’à la fin de l’année, ce qui est rapidement démenti par le Ministre de l’Intérieur Castaner.
+La porte-parole du gouvernement Sibeth Ndiaye explique alors que, bien que le déconfinement commence le 11 mai, mieux vaut prévoir ne pas partir en vacances en août. Aussitôt, une virologue experte (Anne Goffard) annonce alors sur France-Inter que plusieurs études de modélisation dans différents pays concluent à “une deuxième vague épidémique très probable au plus tôt fin août”, à moins que ce ne soit ”en octobre ou en novembre”. [3]
+
+De son côté, le ministre de l’Education Jean-Michel Blanquer annonce la réouverture de “toutes les écoles dans toutes les zones”, en précisant aussitôt que les enfants sont probablement de gros vecteurs du virus et qu’il faudra sans doute laisser fermés les collèges, les lycées et l’enseignement supérieur. La ministre du travail Muriel Pénicaud estime alors sur France-Info “raisonnable de dire” qu’un télétravail massif aura lieu au moins jusqu’à l’été”, ce qui achève de rendre caduque l’annonce d’un déconfinement le 11 mai.
+Je passe sur la publication d’une carte des départements rouges, oranges et verts dont on nous explique qu’ils pourront servir, ou non, à définir des dates différentes d’ouverture des différents secteurs de l’économie ; sur les annonces contradictoires des bienfaits du confinement, des masques, des tests de dépistage ; sur l’affaire de la chloroquine atteignant le summum de la foire d’empoigne, avec des experts tout aussi incontestables les uns que les autres qui se prononcent en faveur ou en opposition totale au traitement ; sur le fait que les enfants et les jeunes sont successivement présentés comme potentiellement victimes de la maladie ou au contraire parfaitement protégés.
+
+Si, à la fin de ce message, vous avez mal à la tête, et envie de sortir vous promener pour penser à autre chose, dites-vous que c’est exactement l’effet recherché par les Autorités des pays totalitaires lorsqu’ils assomment leurs citoyens sous un déluge d’informations, contre-informations, ré-informations : obtenir que les réseaux de résistance se divisent. Que  les citoyens se découragent. Que la critique devienne impossible. Que l’action, la réaction, la révolte, perdent leur sens.
+
+Comme il n’y a plus de vérité, il n’y a plus de réalité. Vous avez l’impression de vous battre contre des moulins qui tournent dans tous les sens. Vous comprenez que lire, parler, réfléchir, n’a plus aucun sens car on peut penser tout et son contraire, selon les sources que l’on choisit, et qui évoluent elles-mêmes en permanence.
+
+C’était la triste situation de nombreux pays au XXème siècle, dont on espérait pourtant ne pas reproduire les erreurs au XXIème :
+“Quand tout le monde vous ment en permanence, le résultat n’est pas que vous croyez ces mensonges mais que plus personne ne croit plus rien. Un peuple qui ne peut plus rien croire ne peut pas se faire une opinion. Il est privé non seulement de sa capacité d’agir mais aussi de sa capacité de penser et de juger. Et, avec un tel peuple, vous pouvez faire ce que vous voulez”, disait Hannah Arendt. »</pre>
+</div>
 <div created="20190109082447167" modified="20190517134951660" tags="todo" title="leboncoin">
 <pre>! Enfants
 * petits malins / sylvana family
@@ -12219,6 +12275,44 @@ Cette phrase est une invitation à une conversation qui valorisera les pensées 
 
 10) ''Oui''.
 Prenez l’habitude de dire « oui » plutôt que « non ». Et de manière générale à formuler vos phrases affirmativement.</pre>
+</div>
+<div created="20200528153411524" modified="20200529213236639" tags="fiche_lecture questiologie" title="Les questions pour comprendre un sujet">
+<pre>https://www.youtube.com/watch?v=zSRDgZCyEu0&amp;t=652s
+
+&lt;&lt;&lt;
+la connaissance (la certitude) est une sensation
+&lt;&lt;&lt;
+
+
+! QUESTIONS DE VÉRITÉ 
+* Comment sait-on que c’est vrai?
+* Qu'est-ce qui vous permet de dire ça?
+* Comment le savez vous? 
+* Quelles sont vos preuves?
+
+! QUESTIONS DE CURIOSITÉ
+* Qu'est-ce que c'est? 
+* Comment ça marche?
+* À quoi ça ressemble? 
+* Qu’est-ce qu’il y a à l’intérieur?
+
+! QUESTIONS DE CAUSALITÉ
+* D'où ça vient?
+* Pourquoi ça se passe comme ça?
+* Qu'est-ce qui explique ça?
+* Comment en sommes-nous arrivés là? 
+
+! QUESTIONS D'EMPATHIE
+* Est-ce qu'on ne peut pas voir ça autrement?
+* Quels sont les autres points de vue sur ce sujet?
+* Qu'en pensent vos adversaires?
+* Est-ce la seule manière de voir les choses? 
+
+! QUESTIONS DE SOLUTION 
+* Et si on faisait autrement, qu'est-ce que ça impliquerait? 
+* Qu'est-ce qu'il faudrait faire? 
+* Est-ce la meilleure option? 
+* Qu'est-ce qu'on peut faire dès maintenant?</pre>
 </div>
 <div created="20190417083514044" modified="20190418151954519" tags="coinmagic magic" title="Liwag subtlety / nowhere palm">
 <pre>It's truly amazing what a difference it makes in your ability to conceal a coin compared to the Ramsay subtlety, especially considering that it is really just a change in the angle of the coin created by pulling back your ring finger and pinky to place the coin about 80 percent of the way to Nowhere Palm (curl palm in the ring finger). The primary difference in effect is a much greater ability to show the palm open. 
@@ -12323,7 +12417,7 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 * I got this yesterday it will take a bit of practice with the handling but it look's very visual indeed. 
 </pre>
 </div>
-<div created="20190322150952918" modified="20190717145540086" tags="magic" title="magician advices / mistakes">
+<div created="20190322150952918" modified="20200526191705716" tags="magic" title="magician advices / mistakes">
 <pre>! Sankey : magician mistakes
 * talk too much
 * perform too quickly
@@ -12344,7 +12438,15 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 * be an artist of the now
 * treat it as a gift
 * art is the lie that makes you realize the truth - Picasso
-</pre>
+
+! Alex Pandrea : magician mistakes
+* over-proving
+* saying &quot;pick a card&quot;
+* seeable break
+* not knowing where to look (especially while 'doing the move')
+* shufflin after an invisible controle (== overproving)
+* snapping fingers
+* going too quickly</pre>
 </div>
 <div created="20190111131151776" modified="20190211103013615" tags="markups" title="Markups">
 <pre>! Media
@@ -13002,7 +13104,7 @@ La question est : si à l'intérieur de nos yeux se trouve notre système nerveu
 Et si nos yeux servent à capter les particules de lumière, les photons, pour que notre cerveau puisse se fabriquer l'illusion du monde physique, à quoi sert la captation de la lumière par les trous noirs ?
 </pre>
 </div>
-<div created="20190130144059269" modified="20200509093612759" tags="pw" title="pw">
+<div created="20190130144059269" modified="20200604154042363" tags="pw" title="pw">
 <pre>```
 leno.1fr1.nt =&gt; A...n 2/20
 FREEBOX =&gt; 1/20
@@ -13028,7 +13130,7 @@ spamgourmet.net
     samuel.lemoine =&gt; 6/17
 swdestinydb =&gt; 
 starwarsdestinyfr.forumactif.com =&gt; 7/17
-steam =&gt; lenopgm 4/18
+steam =&gt; lenopgm 5/20
 humble bundle =&gt; 4/18 humble.osef.osef@xoxy.net
 ameli =&gt; 06062016
     =&gt; 2 88 06 49 007 351 08 / 14737567
@@ -13064,12 +13166,14 @@ linkedin =&gt; 1/20
 pluralsight =&gt; s.l.y.c 1/20
 interepargne.natixis.fr =&gt; 14290097 [troll]00
 nantesmetropole.fr	metronantes.s.le@x.n	2/20
-https://formations.emergences.net/products/chaine-privee-gratuite-de-jjc osefosef@grr.la 4/20
+https://formations.emergences.net/products/chaine-privee-gratuite-de-jjc saif.shahir@andyes.net 5/20
 https://club.conjuror.community/member-home/  conjuror.s.le@x.n 4/20 nospec
 http://izy.yo.fr/Salarie/IzyFun/ 20200606103761sa.le@y.c 6BUDX4UL ou 5/20
 https://marketing-underground.teachable.com/ tugan.x.os@x.n 5/20
 https://lumo-france.com/philanthropie/the-shift-project/faire-un-don/choix-du-montant s.le@grla 5/20
 edf.s.le x.n 5/20
+trainline capitainetrain.s.le@x.n 5/20
+senscritique.fr =&gt; l.d@y.c 2/17
 ```
 </pre>
 </div>
@@ -13095,10 +13199,33 @@ edf.s.le x.n 5/20
 * http://pythontutor.com/visualize.html#mode=display
 </pre>
 </div>
-<div created="20190529145620246" modified="20200221140849447" tags="quotes" title="Quotes, citations">
+<div created="20190529145620246" modified="20200528100610783" tags="quotes" title="Quotes, citations">
 <pre>&lt;&lt;&lt;
-« Content de peu n’a rien à craindre » - Lao Tseu
+“J’ai toujours cru que j’étais un mec qui expérimentait l’univers jusqu’à ce que je réalise que j’étais l’univers qui expérimentait un mec”.
+-Jim Carrey 
 &lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+&quot;How you make your money is more important than how much you make&quot;
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+ce qui crée le temps, c'est le mouvement
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Ne jamais attribuer à la malveillance ce que la bêtise suffit à expliquer
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Dans ce monde d'envieux, qu'autrui ai mieux que nous est un miroir insupportable de notre absence de toute puissance.
+&lt;&lt;&lt;
+
+
 
 &lt;&lt;&lt;
 « Il y a trois sortes de violence. La première, mère de toutes les autres, est la violence institutionnelle, celle qui légalise et perpétue les dominations, les oppressions et les exploitations, celle qui écrase et lamine des millions d’Hommes dans ses rouages silencieux et bien huilés.
@@ -13274,6 +13401,9 @@ There are no limits. There are plateaus, but you must not stay there, you must g
 
 ! Lao Tsu
 
+&lt;&lt;&lt;
+« Content de peu n’a rien à craindre » - Lao Tseu
+&lt;&lt;&lt;
 
 &lt;&lt;&lt;
 ''I have just three things to teach: simplicity, patience, compassion. These three are your greatest treasures''
@@ -13366,6 +13496,71 @@ Les goyims [non juifs] n'ont de place dans le monde que pour servir le peuple d'
 
 &lt;&lt;&lt;
 'Les vices privés font la vertu publique' Mandeville
+&lt;&lt;&lt;
+
+
+! Magic textes d'ambiance
+
+&lt;&lt;&lt;
+&quot;Hatred outlives the hateful&quot;
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+&quot;Grixis est un monde où seules la mort et la décrépitude existent en abondance. Les cadavres, entiers ou en pièces, sont la monnaie d'échange des nécromanciens et des démons.&quot;
+Maraudeur sacpeau
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+&quot;Étape 1 : Allez chercher votre cousin.
+Étape 2 : Placez votre cousin dans le canon.
+Étape 3 : Allez chercher un autre cousin.&quot;
+- Canon à chair
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+&quot;Feu ! En joue ! Paré !... Enfin, je crois.&quot;
+Frappe guerrière des gobelins (édition fléau)
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+&quot;Il a échangé du sable pour des peaux, des peaux pour de l'or, de l'or pour la vie. A la fin, il a échangé sa vie pour du sable.&quot;
+- Afari, récits (Ressources gaspillées)
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+&quot;Vos lois, comme vos os sont fait pour être brisées&quot; Chevalier de l'infamie 
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Les gens ne disent jamais &quot;Je suis sur que ce n'était rien&quot; sans penser le contraire.
+(Sentiment d'effroi)
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+&quot;Il y a bien peu de la justice à la vengeance. &quot;
+&quot;It is a narrow line between justice and vengeance.&quot;
+Justice d'Urborg
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+&quot;Nous sommes dans une fantasmagorie et notre vue de l'univers est purement l'effet de ce mauvais sommeil qui est la vie.&quot;
+J'ai oublié la carte. Une créature bleue 3/3 avec le vol.
 &lt;&lt;&lt;
 </pre>
 </div>
