--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -9410,7 +9410,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200605074309162" list="[[Books / livres]] Home" modified="20200605074309162" title="$:/StoryList">
+<div list="Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9461,11 +9461,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;1536&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;864&quot;
         }
     }
 }</pre>
@@ -11319,7 +11319,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200401123606065" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200622115210195" tags="home current" title="Home">
 <pre>* [[todo DL]]
 * [[current urls]]
 
@@ -11336,6 +11336,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * https://facebook.com/messages l.d@y7+17
 * https://monespace.ausy.fr sa.le@au.f
 * DBL https://www.jmcorda.com/fr/dominationbylove?infos=dbl.x.osef%40xoxy.net%2C5e32d7afd5748%2CZjdkMDM0OTliYzU2MDEwOWNlZjVlM2M1NzNkMDZhMjBjMWViOWRlYQ%3D%3D
+* RX https://marketing-underground.teachable.com/courses/enrolled/697137 520
 * Ecole Directe https://www.ecoledirecte.com =&gt; sjlemoine 9/19
 
 ! Slacking
@@ -13104,7 +13105,7 @@ La question est : si à l'intérieur de nos yeux se trouve notre système nerveu
 Et si nos yeux servent à capter les particules de lumière, les photons, pour que notre cerveau puisse se fabriquer l'illusion du monde physique, à quoi sert la captation de la lumière par les trous noirs ?
 </pre>
 </div>
-<div created="20190130144059269" modified="20200604154042363" tags="pw" title="pw">
+<div created="20190130144059269" modified="20200617170226843" tags="pw" title="pw">
 <pre>```
 leno.1fr1.nt =&gt; A...n 2/20
 FREEBOX =&gt; 1/20
@@ -13174,6 +13175,7 @@ https://lumo-france.com/philanthropie/the-shift-project/faire-un-don/choix-du-mo
 edf.s.le x.n 5/20
 trainline capitainetrain.s.le@x.n 5/20
 senscritique.fr =&gt; l.d@y.c 2/17
+forum corda =&gt; Osef os.x.corda@x.n S6/20
 ```
 </pre>
 </div>
