--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -431,6 +431,8 @@ Error message and password prompt
 
 <li>Signes de reconnaissance entre initiés</li>
 
+<li>Statistiques ethniques USA</li>
+
 <li>Stoicism - stoïcisme</li>
 
 <li>Sx</li>
@@ -9410,7 +9412,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="Home" title="$:/StoryList">
+<div created="20200717134507879" list="Home" modified="20200717134507879" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9470,8 +9472,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200605074307882" title="$:/temp/search">
-<pre>books</pre>
+<div created="20190114084246125" modified="20200717093143704" title="$:/temp/search">
+<pre>blag</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9706,10 +9708,13 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Jean-Samuel Pallard
 </pre>
 </div>
-<div created="20200526193035917" modified="20200526193059628" tags="humour" title="blagues">
+<div created="20200526193035917" modified="20200717093237756" tags="humour" title="blagues">
 <pre>* Mr &amp; Mme soupover : Michel (soupe au vermichel)
 * 2 mouettes se battent pour un bout de pain : on fait mouette mouette ?
 * comment appelle-ton un oiseau roux ? un roussignol
+* qu'est-ce qu'un matelot qui boit trop ? Un saoul-marin
+CECI EST UNE ALERTE BLAGUE NULLE DE NIVEAU 8. IL NE S'AGIT PAS D'UN EXERCICE.
+DIRIGEZ VOUS DANS LE CALME VERS LA SORTIE LA PLUS PROCHE.
 </pre>
 </div>
 <div created="20190131165226977" modified="20200605074426385" tags="epub download" title="Books / livres">
@@ -11319,7 +11324,7 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20200622115210195" tags="home current" title="Home">
+<div created="20190108105358377" modified="20200717170521097" tags="home current" title="Home">
 <pre>* [[todo DL]]
 * [[current urls]]
 
@@ -11335,9 +11340,15 @@ Augustin Barruel - Mémoires pour servir à l'histoire du jacobinisme	https://fr
 * https://www.epicgames.com/store/en-US/free-games epicgames.osef.osef@xoxy.net 7/19
 * https://facebook.com/messages l.d@y7+17
 * https://monespace.ausy.fr sa.le@au.f
-* DBL https://www.jmcorda.com/fr/dominationbylove?infos=dbl.x.osef%40xoxy.net%2C5e32d7afd5748%2CZjdkMDM0OTliYzU2MDEwOWNlZjVlM2M1NzNkMDZhMjBjMWViOWRlYQ%3D%3D
-* RX https://marketing-underground.teachable.com/courses/enrolled/697137 520
 * Ecole Directe https://www.ecoledirecte.com =&gt; sjlemoine 9/19
+
+! Formations
+* DBL https://www.jmcorda.com/fr/dominationbylove?infos=dbl.x.osef%40xoxy.net%2C5e32d7afd5748%2CZjdkMDM0OTliYzU2MDEwOWNlZjVlM2M1NzNkMDZhMjBjMWViOWRlYQ%3D%3D* TUGAN https://marketing-underground.teachable.com/
+* TUGAN PROFIT MIMETIQUE accueil https://marketingunderground.biz/merci-pm-intro-1
+* TUGAN PROFIT MIMETIQUE https://marketing-underground.teachable.com/courses/enrolled/751913
+* TUGAN Vente Emotionnelle https://marketing-underground.teachable.com/courses/enrolled/623137
+* TUGAN Funnel Academy https://marketing-underground.teachable.com/courses/enrolled/623136
+* TUGAN RX https://marketing-underground.teachable.com/courses/enrolled/697137 tugan.x.osef@x.n 520
 
 ! Slacking
 * sebs https://sebsauvage.net/links/
@@ -13105,7 +13116,7 @@ La question est : si à l'intérieur de nos yeux se trouve notre système nerveu
 Et si nos yeux servent à capter les particules de lumière, les photons, pour que notre cerveau puisse se fabriquer l'illusion du monde physique, à quoi sert la captation de la lumière par les trous noirs ?
 </pre>
 </div>
-<div created="20190130144059269" modified="20200617170226843" tags="pw" title="pw">
+<div created="20190130144059269" modified="20200717093053304" tags="pw" title="pw">
 <pre>```
 leno.1fr1.nt =&gt; A...n 2/20
 FREEBOX =&gt; 1/20
@@ -13120,11 +13131,11 @@ paypal =&gt; 8/17 ebay.s.lemoine@xoxy.net
 ebay =&gt; 3/18 ebay.s.lemoine@xoxy.net
 illicado =&gt; 1/18 illicado.s.lemoine@xoxy.net
 amazon =&gt; 1/14 amazon.s.lemoine@xoxy.net
-intra.ausy.fr =&gt; 11/17 || 1/20
-webmail.ausy.fr =&gt; https, s.l@a.f 1/20
+intra.ausy.fr =&gt; 11/17 || 1/20 || 7/20
+webmail.ausy.fr, monespace.ausy.fr =&gt; https, s.l@au.f 7/20
 coffreo.com =&gt; samuel.lemoine@yahoo.com 8/18 
 facebook.com =&gt; 7/17
-yahoo.com =&gt; 1/20
+yahoo.com =&gt; 6/20
 9gag =&gt; 9gag14.osef.osef@xoxy.net 12/14
 spamgourmet.net
     leno.dalton =&gt; 4/17
@@ -13176,6 +13187,7 @@ edf.s.le x.n 5/20
 trainline capitainetrain.s.le@x.n 5/20
 senscritique.fr =&gt; l.d@y.c 2/17
 forum corda =&gt; Osef os.x.corda@x.n S6/20
+heros.ws =&gt; 7/20
 ```
 </pre>
 </div>
@@ -13738,6 +13750,29 @@ Le langage.
 &quot;Il pleut&quot; est une formule utilisée pour alerter un frère de l'arrivée d'un profane. S'il s'agit d'une intruse, on dira: &quot;Il neige&quot;. Un maçon a tendance, par habitude, ou pour se faire reconnaître, à utiliser un vocabulaire spécifique.
 
 Il dira qu'il &quot;planche&quot; sur un dossier plutôt qu'il y travaille. Il parlera volontiers d'un discours &quot;tranchant&quot; ou de la &quot;pierre angulaire&quot; d'un problème. Il peut glisser dans la conversation des mots très usités en Loge: acclamation, chaîne, équerre, illustre, midi, minuit... </pre>
+</div>
+<div created="20200717093101888" modified="20200717093129394" tags="" title="Statistiques ethniques USA">
+<pre>USA
+	victimes noires :
+		assassin noir : 9/10
+		assassin blanc : 1/10
+
+	assassins blancs :
+		tue un noir : 1/13
+		tue un non-noir : 12/13
+
+	assassins noirs :
+		tue un noir : 5/6
+		tue un blanc : 1/6
+
+	meutres interraciaux :
+		blanc tue noir : 1/3
+		noir tue blanc : 2/3
+
+	meurtres :
+		assassin blanc : 45% (population blanche : 76%)
+		assassin noir : 48% (population blanche : 14%)
+</pre>
 </div>
 <div created="20190705150955988" modified="20190705151527706" tags="fiche_lecture stoicism" title="Stoicism - stoïcisme">
 <pre>Adapted environment &gt; Discipline &gt; Motivation
