--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -279,8 +279,6 @@ Error message and password prompt
 
 <li>douches froides</li>
 
-<li>Draft of 'Books / livres'</li>
-
 <li>DUVIVIER : Winston FREER, 17 familles d’effets magiques</li>
 
 <li>Eco &amp; Responsable</li>
@@ -9420,7 +9418,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20200807104948895" list="Home" modified="20200807105156526" title="$:/StoryList">
+<div created="20200807104948895" list="[[Books / livres]] Home" modified="20200807110242689" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9480,8 +9478,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20200807104940847" title="$:/temp/search">
-<pre>poi</pre>
+<div created="20190114084246125" modified="20200807110238093" title="$:/temp/search">
+<pre>books</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9725,8 +9723,10 @@ CECI EST UNE ALERTE BLAGUE NULLE DE NIVEAU 8. IL NE S'AGIT PAS D'UN EXERCICE.
 DIRIGEZ VOUS DANS LE CALME VERS LA SORTIE LA PLUS PROCHE.
 </pre>
 </div>
-<div created="20190131165226977" modified="20200605074426385" tags="epub download" title="Books / livres">
+<div created="20190131165226977" modified="20200807110402223" tags="epub download" title="Books / livres">
 <pre>* ''Paul Feyerabend - Against method, outline of an anarchist theory of knowledge / Contre la méthode, Esquisse d’une théorie anarchiste de la connaissance''
+! Boris Crevin / Karezza
+* ''Cupid's Poisoned Arrow ''by Robinson
 ! Fabien Olicard
 * La lecture rapide (ou pas) - Tony Buzan (no epub)
 ! Delphine Batho
@@ -10872,9 +10872,6 @@ SELECT * FROM v$version;
 * brûle des calories
 * travaille la discipline / détermination
 * donne du peps</pre>
-</div>
-<div modified="20190617151443806" title="Draft of 'Books / livres'">
-<pre></pre>
 </div>
 <div created="20190830130640400" modified="20190830142257946" tags="magic duvivier" title="DUVIVIER : Winston FREER, 17 familles d’effets magiques">
 <pre>! Duvivier
