--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -467,6 +467,8 @@ Error message and password prompt
 
 <li>shuttle pass / flying shuttle pass</li>
 
+<li>sms</li>
+
 <li>Statistiques ethniques USA</li>
 
 <li>Stoicism - stoïcisme</li>
@@ -9489,7 +9491,7 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20210115135051074" list="[[online services, addons &amp; resources]] Home pw" modified="20210115155916730" title="$:/StoryList">
+<div list="Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9540,17 +9542,17 @@ Now comes the &quot;hard&quot; part. Take the deck face up (slightly angled so t
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1536&quot;
+            &quot;text&quot;: &quot;1696&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;864&quot;
+            &quot;text&quot;: &quot;954&quot;
         }
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20210115154836895" title="$:/temp/search">
-<pre>resou</pre>
+<div created="20190114084246125" modified="20210201130231117" title="$:/temp/search">
+<pre>perc</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -13499,7 +13501,7 @@ croyance limitante
 ```
 </pre>
 </div>
-<div created="20190322150105505" modified="20210115154914105" tags="improve core" title="online services, addons &amp; resources">
+<div created="20190322150105505" modified="20210120144412667" tags="improve core" title="online services, addons &amp; resources">
 <pre>! sub
 * https://www.sous-titres.eu/
 * https://www.opensubtitles.org/fr/search/subs
@@ -13548,6 +13550,7 @@ croyance limitante
 * (copelandcoins) https://dave.copelandcoins.com/pocket pw:[see pw]
 * (copelandcoins) https://dave.copelandcoins.com/tresor pw:[see pw]
 * (copelandcoins) https://dave.copelandcoins.com/reialme pw:[see pw]
+* (copelandcoins) https://dave.copelandcoins.com/insights pw:[see pw]
 * (copelandcoins) https://dave.copelandcoins.com/tresor-video
 </pre>
 </div>
@@ -13970,7 +13973,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20201201132516726" modified="20201224120711991" tags="" title="Perçou kid talk Perceval">
+<div created="20201201132516726" modified="20210201130437129" tags="" title="Perçou kid talk Perceval">
 <pre>* 	a kapoté &gt;&gt;	le grain de beauté
 * 	a kakopel &gt;&gt;	le tractopelle
 * 	akatola &gt;&gt;	chocolat
@@ -13989,9 +13992,12 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * 	akaboul	&gt;&gt;	le coup de boule
 * 	b'val	&gt;&gt;	Perceval
 * 	amma	&gt;&gt;	Emma
-* 	batogan / bagan	&gt;&gt;	tobogan
-* 	tymama	&gt;&gt;	pyjama (&quot;alève a tymama&quot;)
-* 	a cahion ateur	&gt;&gt;	camion-aspirateur</pre>
+* 	batogan / abagan	&gt;&gt;	tobogan
+* 	tymama / tynama	&gt;&gt;	pyjama (&quot;alève a tymama&quot;)
+* 	a cahion ateur	&gt;&gt;	camion-aspirateur
+* 	akor a tchipitch	&gt;&gt;	encore un litchi
+* 	a to titure	&gt;&gt;	la confiture
+</pre>
 </div>
 <div created="20190301161125545" modified="20190301161230451" tags="fiche_lecture" title="Philogynes BIG5" type="">
 <pre>https://www.youtube.com/watch?v=jC3BsBPqDRA
@@ -14174,7 +14180,7 @@ La question est : si à l'intérieur de nos yeux se trouve notre système nerveu
 Et si nos yeux servent à capter les particules de lumière, les photons, pour que notre cerveau puisse se fabriquer l'illusion du monde physique, à quoi sert la captation de la lumière par les trous noirs ?
 </pre>
 </div>
-<div created="20190130144059269" modified="20210115160004738" tags="core" title="pw">
+<div created="20190130144059269" modified="20210120144538618" tags="core" title="pw">
 <pre>pw passw
 
 
@@ -14275,6 +14281,7 @@ viajero =&gt; monedas
 pocket =&gt; watch
 tresor =&gt; TigerTanCoin &amp; Tresorpreview
 reialme =&gt; kingdomcome
+insights =&gt; notevenreal
 ```
 
 </pre>
@@ -14944,6 +14951,342 @@ The answer to your second question: the realization that the utility switch coul
 
 &lt;&lt;&lt;
  One thing I noticed with David Roth's Shuttle Pass is that he always appears to catch the coin with his fingertips - never misses! Try doing this for real, actually tossing the coin from one hand to the other. I found that when I tried to catch it like that I had more than a fair amount of misses. Finally I started catching it a little further down on my fingers and immediately pushing it back up to the fingertips with my thumb. (Talking about doing the toss for real; not the sleight). Once I found how it works best in reality I altered the sleight for myself, showing the caught coin lower and pushing it back up. Looks a lot more natural for me now. 
+&lt;&lt;&lt;
+
+</pre>
+</div>
+<div created="20210201141630186" modified="20210201142007178" tags="" title="sms">
+<pre>
+&lt;&lt;&lt;
+Bob 20/08/2020 09h20
+Yo gros Samy ! Ça roule ou quoi ? Je prend des news vu que t'en donnes jamais tocard :D Tu bosses ? T'es en vacances ?
+
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+AS24 Romain 28/02/2020 14h03
+Ah bah super, tout le monde s'enfuit sans prévenir ! Super de faire des soirées avec vous ^ ^ Ben ouais c'était cool ! On se refera ça et je ramènerai mes cartes cette fois
+
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Harold 01/01/2020 12h04
+C'est beau ce que tu dis putain.
+Bonne année à toi aussi. Que la hype soit retrouvée cette année
+
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Harold 27/11/2019 20h09
+On teste Marvel Champions vendredi soir. Ça te dit?
+
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Julia 14/11/2019 12h31
+Allo ze peux pas aller à l-école paque ma fille elle a mal au ventre.
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 26/04/2019 11h26
+Emma a mis des balles de tenis dans son pull et est venu me voir en nous disant : c'est mes gros seins ! On va avoir des problèmes à l'école...
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Clarichou 23/01/2019 00h23
+Un gros big up frero! J'ai aimé notre soirée et nos échanges. En plus j'ai fini mon transport en bus avec ce petit allumé de larret de bus bien perché ! Merci cest vivant ! Mille bisous. Love you
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+28/12/2018 9h38
+Bonjour Mr Lemoine, 
+Le logiciel dont je vous parlais hier s'appelle Human Anatomy Atlas.
+Bonne journée, L***e V******n, ostéopathe
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+
+Julia 07/12/2018 11h28
+Laluelle l'a mit le petit bazare, bazare l'a mit Emma
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 15/10/2018 22h20
+Merci à toi d'etre un papa formidable ! Je t'aime bonne nuit
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 29/07/2018 22h58
+Moi aussi je t'aime mon chéri. Ne t'en fais pas je t'aime de toute facon et je vois bien que ce sont des situations difficiles pour toi... Je suis triste de ne pas réussir à te dire les choses de facon constructive... Je pense que tu manques de confiance en toi et que cela te rend certaines situations plus compliquées qu'elles ne devraient ou qu'elles ne sont. Ex piste de danse, pour commander dans un bar, circuler dans une foule, demander ta route ds la rue, demander une info dans un bus, etc... J'étais pareille avant et ce n'est pas encore facile pour moi... C'est peut-etre pour ca que ca m'affecte autant... On en reparlera mon amour pour que l'on puisse s'aider dans les situations inconfortables de façon constructive. Je t'aime et je suis pressée de te retrouver demain soir !
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 10/07/2018 16h34
+Emma aimerait bien que son papa lui téléphone...
+
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Harold 18/03/2018 19h50
+Épique ta signature
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Harold 06/07/2017 18h56
+Courage Dude. Ta place est là bas
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Clarichou 10/06/2017 13h36
+Ce matin, Pia a mangé un peu son caca.
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+VSCT Vincent 09/05/2017 14h04
+Tu es parti ? J'aurai bien aimé te dire au revoir 
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Chass 01/01/2017 00h56
+Bisous mon beauf à toi et ta famille. 2017 va nous emmenez là on on a jamais été dans notre nouvelle vie de père. J'aime vraiment faire partie des votres, passe le message à ton voisin et à ta daronne of course
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+@Nathalie 11/12/2016 17h49
+Merci Nathalie pour ces mots de réconciliation... Je t'accorde mon pardon avec joie, et te demande pardon moi aussi pour la façon dont je t'ai parlé. Je t'apprécie beaucoup et j'étais très triste de notre accrochage, je me sentais dans une impasse... Il ne s'agit pas d'un problème de confiance, nous en reparlerons... vendredi soir sans doute :)
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Nathalie 11/12/2016 10h50
+Je te demande pardon pour les mots qui t'ont blessé hier soir. Je voulais te dire que j'ai besoin que tu me fasses + confiance, que je sais que tu ne veux pas qu'Emmanuelle pleure contre moi, et que du coup je ne lui propose pas de décharge émotionnelle depuis quasiment le début. Je tache juste de lui donner beaucoup d'attention quand je suis dispo. Ce qui m'est rare quand on est nombreux.
+Bref, ça ne voulait pas dire que toi tu étais &quot;long&quot; à &quot;régler&quot; le problème. Ce que tu as pu entendre. J'ai besoin que tu ne me prennes pas pour une brute. Ecouter pleurer n'est pas faire pleurer. Encourager à exprimer est un pas de plus. On pourra en reparler.
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+MdT 22/09/2016 11h43
+Si seulement ma famille pouvait réagir comme toi, merci
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+@MdT
+J'veux t'forcer à rien poto, bien sûr qu'tu peux annuler :) on remet ça une autre fois ! Take care
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Guigui 02/09/2016 18h37
+Salut mon Sami, ça m'a fait bien plaisir de te revoir et d'assister à ton mariage ! (je pensais pas que ça arriverait !) J'espère avoir l'occasion de te revoir plus rapidement, avec toute ta petite famille. Si tu passes en Normandie et comme dirait Florent Pagny, tu seras bienvenue chez moi. Bisous
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Manon 28/08/2016 23h05
+Coucou Samuel! Tout d'abord, je voulais vous remercier, toi et Julia, parce que j'ai passé de très bons moments, et ca m'a fait plaisir, vraiment :) Alors merci, votre mariage, c'était des sourires sur tous les visages, c'était véritablement une joie partagée. Ensuite, je voulais vous dire (ce que je n'ai pas eu l'occasion de faire) que je vous souhaite tout le bonheur du monde, un bonheur partagé. Je vous regardais dansez, et je vous ai trouvé magnifique tous les deux, rayonnant d'amour. Je vous souhaite d'entretenir et de préserver ces rayons! Votre mariage m'a permi de découvrir la salsa, du moins une infime parcelle, et c'est certain, cela m'a donné envie d'en découvrir plus! :) D'autre part, je me posais la question, pour votre choupinette que j'ai eu la joie de rencontrer, est-ce qu'elle a déjà un ou une babysitter attitré(e) ou non? Car si ce n'est pas le cas, et qu'en week-end vous voulez sortir tous les deux et que vous avez besoin de quelqu'un pour la garder le soir, je pourrais vous rendre ce service...et cela me ferait plaisir de surcroit! :) Je termine là, en vous souhaitant à tous les trois de bien dormir, vous devez etre fatigués... Merci encore, infiniment, pour ce moment partagé :)
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Simon Parkour 28/08/2016 19h40
+Merci pour ce magnifique WE d'amour a partager, là je suis sur le bateau avec face a moi l'ile et à 1h le couché de soleil et pourtant G pas envie de rentrer, je suis nostalgique. Merci pour ce WE et ces moments d'amour partagés. Vous avez un entourage génial, j'crois qu'j'voudrais tous les revoir ^ ^ CT juste magic!
+Répondez pas à ce message, prenez le juste kom un cadeau. Merci à vous, en officialisant votre bonheur vous en avez offert en grosse dose à tout votre entourage! ;)
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Vincent Couprie 28/08/2016
+coucou merci grandiose votre mariage!on est super content!ca s'est bien passé votre retour?
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 27/08/2016 00h06
+Je prends une douche et je me couche !! Je t'aime
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Harold 07/06/2016 21h48
+Tu me manques gros
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Harold 02/05/2016 20h34
+Arreté tu étais top player du circuit po à Agot. Tu ne laissais aucune chance à tes adversaires. Tu mangeais pas de tomates et tu regardais des vidéos de starcraft II. Une machine. Sinon cette semaine c'est chaud pour nous. C'est quand le terme pour vous ?
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 05/02/2016 12h45
+Tout va bien pour le bb !! Le coeur bat normalement et il a donné des coups de pieds à la médecin
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Alban 28/01/2016 19h46
+Sto lat ! Sto lat ! Joyeux anniversaire bro' :D Sto lat c'est en Polonais ca veut dire que je souhaite que t'ateignes les 100 ans ;D !! Gros bisous samourai !!
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Clarichou 20/12/2015 14h53
+oh cest nul! pauvre dagobert! soit pas trop triste...
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Alban 27/11/2015 09h02
+Jsui rentré &amp; je souhaite pas faire de commentaires. Merci en tout cas.
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Castor 13/10/2015 17h54
+Carrément ! Je vais sortir mon plus beau costume !
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Bob 01/10/2015 15h03
+Omg batard !! C'est GG ca ! Avec Julia ? (Je péfère demander avec toi !)
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 28/09/2015 18h48
+On peut se voir avant que tu ailles à even ?
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+MdT 26/09/2015 15h27
+Tu viens tjs today? Jsuis pas au mieux, j'ai pas envie de rester tout seul...
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 06/07/2015 15h17
+Raphaël trouve que j'ai une jolie bague :)
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 30/05/2015 22h24
+Peter ? Oh ? Il faut que tu viennes me montrer ça ;)
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 20/05/2015 13h34
+^ ^ je regarde winnie l'ourson et tigrou en haut d'un arbre me fait à toi... Ahah
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 29/04/2015 15h19
+Je t'aime toi ! Merci d'etre dans ma vie :) tkt je vais bien, juste je voulais te le dire ;)
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+MdT 18/03/2015
+Merci pour tes messages potoz &lt;3
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 15/09/2014 17h16
+Mon chéri !!!! Je ne sais pas ce que j'ai mais je suis pressée d'etre ce soir... Et de retrouver mon chéri ;) ! Je t'aime...
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Alban 28/09/2014 14h05
+Merci ! Jsui dans le bus pour krakow la, je vais partir de Paris. Y'a que des polonais dans mon bus et y'a pas une tete normale. . . x_x tu verrais ca sans dec. C'est enorme &amp; les mecs ils ressemblent tous a des skins c'est chaaaaud ahah
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 15/09/2014 17h16
+Merci d'etre venu ce midi :) je t'aime !
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 14/08/2014 00h39
+Je voudrais être dans tes bras... Je t'aime
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 04/08/2014 10h37
+Oh ! J'ai récupéré un tee-shirt qui sent mon chéri !!! :D je suis contente ;) !
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+Julia 15/07/2014 23h08
+Je m'endors avec ton écharpe : heureuse &lt;3 ! 3 ados m'ont demandé en mariage ce soir... J'ai refusé, tkt ;) ^ ^ Au fait, j'aime beaucoup ton prénom :) je t'aime Samuel &lt;3
 &lt;&lt;&lt;
 
 </pre>
